white buttons version

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -56,9 +56,10 @@ nav.oc-navbar {
             border-radius: 22.5px;
             width: 45px;
             height: 45px;
-            border: 1px solid rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(78, 90, 107, 0.1);
             float: left;
             padding: 9px;
+            background-color: white;
 
             img.slack-icon {
               width: 25px;
@@ -97,9 +98,10 @@ nav.oc-navbar {
             border-radius: 22.5px;
             width: 45px;
             height: 45px;
-            border: 1px solid rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(78, 90, 107, 0.1);
             float: left;
-            padding: 11px;
+            padding: 12px;
+            background-color: white;
           }
         }
       }
