--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -16,7 +16,7 @@ nav.oc-navbar {
     left: 0px;
     width: 100%;
     height: 70px;
-    background-color: rgba(78, 90, 107, 0.5);
+    background-color: #A7ADB5;
 
     div.su-snapshot-preview-internal{
       margin: 18px auto;
