su-preview -> su-preview-dialog

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -59,7 +59,7 @@
 @import "partials/_add_topic_popover";
 @import "partials/_atomic";
 @import "partials/_growth_metric_edit";
-@import "partials/_su_preview";
+@import "partials/_su_preview_dialog";
 @import "partials/_topics_columns";
 @import "partials/_menu_page";
 @import "partials/_su_snapshot_preview";
