--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -16,7 +16,7 @@ nav.oc-navbar {
     left: 0px;
     width: 100%;
     height: 60px;
-    background-color: #A7ADB5;
+    background-color: #989EA6;
 
     div.su-snapshot-preview-internal{
       margin: 13.5px auto;
