--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -74,7 +74,7 @@ div.topic-list{
         text-align: center;
 
         button.share-snapshot-bt{
-          padding: 6px 20px;
+          padding: 6.5px 20px;
           background-color: $oc_yellow;
           font-weight: 700;
           font-size: 12px;
@@ -83,6 +83,10 @@ div.topic-list{
           color: #4e5a6b;
           outline: none;
           border: 0px solid transparent;
+
+          img.small-loading {
+            margin-right: 10px;
+          }
         }
       }
 
