--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -35,7 +35,7 @@ div.su-snapshot-preview {
         outline: none;
         border: 1px solid transparent;
         background-color: transparent;
-        corner-radius: 2px;
+        border-radius: 2px;
       }
     }
 
