save menu open/close state in the app-state, render the page with menu open when needed

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -39,6 +39,6 @@ ul#menu {
   }
 }
 
-.animating #menu, .menu-visible #menu {
+body.animating ul#menu, body.menu-visible ul#menu {
   display: block;
 }
