--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -64,3 +64,4 @@
 @import "partials/_su_snapshot_preview";
 @import "partials/_su_snapshot";
 @import "partials/_back_to_dashboard_btn";
+@import "partials/_small_loading";
