use the new small loading component

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -84,7 +84,7 @@ div.topic-list{
           outline: none;
           border: 0px solid transparent;
 
-          img.small-loading {
+          div.small-loading-container {
             margin-right: 10px;
           }
         }
