add home component

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -62,3 +62,4 @@
 @import "partials/_menu_page";
 @import "partials/_su_snapshot_preview";
 @import "partials/_su_snapshot";
+@import "partials/_home";
