move div.page-no-navbar to a more general style sheet

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -119,3 +119,12 @@ svg.emojione {
 *::-moz-selection {
   background: rgba(249,215,72, 0.5);
 }
+
+div.page-no-navbar{
+  position: relative; /* Set the position property so z-index will apply */
+  z-index: 20; /* Make sure this is higher than #menu */
+  top: 0px !important;
+
+  background: #fff;
+  min-height: calc(100vh - #{$footer_height}px);
+}
