--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -119,3 +119,7 @@ svg.emojione {
 *::-moz-selection {
   background: rgba(249,215,72, 0.5);
 }
+
+.navbar-offset {
+  margin-top: #{$navbar_height}px;
+}
