fix save-button classes

--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -21,7 +21,7 @@
 }
 
 .btn-solid {
-  background-color: #f9d748;
+  background-color: $oc_yellow;
   font-weight: 700;
   font-size: 0.75rem;
   letter-spacing: .1em;
