fix initial company data loading, add spinner to show company data are still loading

--- a/scss/partials/_company_profile.scss
+++ b/scss/partials/_company_profile.scss
@@ -17,6 +17,15 @@ div.company-profile{
       line-height: 1.4;
       color: $oc_gray_5;
       height: 74px;
+
+      span {
+        float: left;
+      }
+
+      div.small-loading-container {
+        float: left;
+        margin-left: 20px;
+      }
     }
 
     img.loading-spinner {
