do not remove the loading spinner before leaving the dashboard, fix spinner position, use small-loading component

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -86,6 +86,7 @@ div.topic-list{
 
           div.small-loading-container {
             margin-right: 10px;
+            float: left;
           }
         }
       }
