list companies css to fix menu drawer position

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -66,3 +66,4 @@
 @import "partials/_back_to_dashboard_btn";
 @import "partials/_small_loading";
 @import "partials/_home";
+@import "partials/_list_companies";
