--- a/scss/partials/_list_companies.scss
+++ b/scss/partials/_list_companies.scss
@@ -4,7 +4,33 @@ body.animating div.list-companies div.page {
   top: 0px;
 
   div.navbar-offset {
-    top: 104px;
+    top: #{$navbar_height}px;
     position: absolute;
+  }
+}
+
+div.list-companies {
+
+  div.navbar-offset {
+    padding-top: 50px;
+
+    ul.companies {
+      list-style-type: none;
+
+      li {
+        float: left;
+        width: 150px;
+        height: 50px;
+        margin: 10px;
+        border: 1px solid rgba(78, 90, 107, 0.5);
+        box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
+
+        a {
+          color: $oc_gray_5;
+          padding: 15px;
+          display: block;
+        }
+      }
+    }
   }
 }
