--- a/scss/partials/_tooltip.scss
+++ b/scss/partials/_tooltip.scss
@@ -1,19 +1,20 @@
 div.tooltip-container {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 221px;
+  height: 113px;
+  left: 50%;
+  top: 50%;
+  margin-left: -110px;
+  margin-top: -56px;
   z-index: 10000;
+  padding: 0px;
 
   div.tooltip-box {
     position: absolute;
-    width: 221px;
-    height: 113px;
-    left: 50%;
-    top: 50%;
-    margin-left: -110px;
-    margin-top: -56px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
     background-color: rgba(77, 89, 106, 0.8);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     opacity: 0;
