fix placeholder body style for placeholder sections

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -174,4 +174,8 @@
   *::-moz-selection {
     background: rgba(249,215,72, 0.5);
   }
+
+  &::after{ //placeholder
+    white-space: inherit;
+  }
 }
