--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -13,7 +13,7 @@ div.footer {
     div {
       text-align: center;
 
-      a.io-link {
+      a.com-link {
         width: 322px;
         height: 50px;
         border: solid 3px rgba(78, 90, 107, 0.2);
