fix suggested topic header (or archived topics header when no suggested topics are present) to the top of the popover, fix the add custom topic at the bottom

--- a/scss/partials/_add_topic_popover.scss
+++ b/scss/partials/_add_topic_popover.scss
@@ -72,24 +72,26 @@ div.add-topic-popover {
     padding-top: 12px;
   }
 
+  div.add-topic-popover-subheader {
+    opacity: 0.2;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    color: $oc_gray_5;
+    padding: 7px 0 7px 19px;
+    text-align: left;
+    width: 200px;
+  }
+
   div.add-topic-popover-scroll {
-    max-height: 237px;
+    max-height: 195px;
     overflow: scroll;
     width: 200px;
+    margin-bottom: 50px;
 
-    div.add-topic-popover-subheader {
-      opacity: 0.2;
-      font-weight: 700;
-      font-size: 12px;
-      line-height: 1.5;
-      letter-spacing: 1px;
-      color: $oc_gray_5;
-      padding: 7px 0 7px 19px;
-      text-align: left;
-
-      &:first-child {
-        padding-top: 15px;
-      }
+    &::-webkit-scrollbar{
+      display: none;
     }
 
     div.topics-to-add{
@@ -116,40 +118,46 @@ div.add-topic-popover {
     div.add-custom-topic{
       text-align: left;
       padding: 7px 0px 25px 20px;
-      opacity: 0.3;
-      font-family: $oc_headers_font;
-      font-size: 14px;
-      line-height: 1.7;
-      color: $oc_gray_5;
-      height: 59px;
+      position: fixed;
+      bottom: 0px;
 
       &:first-child {
         padding: 12px 0px 12px 20px;
         height: 51px;
       }
     }
+  }
 
-    div.add-custom-topic-container {
-      text-align: left;
-      padding: 7px 0px 25px 20px;
+  div.add-custom-topic-container {
+    text-align: left;
+    padding: 10px 0px 10px 20px;
+    position: absolute;
+    bottom: 0px;
+    height: 45px;
+    width: 100%;
+    background-color: white;
 
-      &:first-child {
-        padding: 12px 0px 12px 20px;
-      }
+    label {
+      opacity: 0.3;
+      font-family: $oc_headers_font;
+      font-size: 14px;
+      line-height: 1.7;
+      color: $oc_gray_5;
+      height: 30px;
+    }
 
-      input {
-        font-family: $oc_headers_font;
-        font-size: 14px;
-        line-height: 1.7;
+    input {
+      font-family: $oc_headers_font;
+      font-size: 14px;
+      line-height: 1.7;
+      outline: none;
+      border: 1px solid rgba(78, 90, 107, 0.3);
+      border-radius: 2px;
+      color: black;
+      height: 30px;
+
+      &:active, &:focus {
         outline: none;
-        border: 1px solid rgba(78, 90, 107, 0.3);
-        border-radius: 2px;
-        color: black;
-        height: 27px;
-
-        &:active, &:focus {
-          outline: none;
-        }
       }
     }
   }
