--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -29,7 +29,7 @@ div.fullscreen-topic {
     cursor: pointer;
     z-index: 1040;
     top: 20px;
-    right: 70px;
+    right: 180px;
   }
 
   .remove-button {
@@ -38,12 +38,24 @@ div.fullscreen-topic {
     bottom: 30px;
   }
 
-  div.close {
+  button.close {
     position: fixed;
     cursor: pointer;
     z-index: 1040;
     top: 20px;
     right: 20px;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  button.close-editing {
+    position: fixed;
+    cursor: pointer;
+    z-index: 1040;
+    top: 20px;
+    right: 40px;
+    margin-top: 0px;
+    height: 32px;
   }
 
   div.fullscreen-topic-transition{
