add small-footer class to body when the user is logged in, use footer_small_height var in sass files to calculate sizes instead of footer_height when the small-footer class is preset

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -130,6 +130,12 @@ div.page-no-navbar{
   min-height: calc(100vh - #{$footer_height}px);
 }
 
+body.small-footer {
+  div.page-no-navbar {
+    min-height: calc(100vh - #{$footer_small_height}px);
+  }
+}
+
 .navbar-offset {
   margin-top: #{$navbar_height}px;
 }
