--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,3 +1,13 @@
+body.small-footer{
+  div.footer{
+    padding-top: 0px;
+
+    div.footer-internal{
+      margin-top: 0px;
+    }
+  }
+}
+
 div.footer {
   background-color: white;
   padding-top: 54px;
